force-app/main/default/objects/Google_API_Setting__c/Google_API_Setting__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Google API Setting</label>
</CustomObject>