force-app/main/default/objects/Google_API_Setting__c/fields/Api_Key__c.field-meta.xml
<CustomField>
    <fullName>Api_Key__c</fullName>
    <label>Api Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>