force-app/main/default/objects/Google_API_Setting__c/fields/Base_Url__c.field-meta.xml
<CustomField>
    <fullName>Base_Url__c</fullName>
    <label>Base Url</label>
    <length>255</length>
    <type>Text</type>
</CustomField>