force-app/main/default/objects/Google_API_Setting__c/fields/Country_Code__c.field-meta.xml
<CustomField>
    <fullName>Country_Code__c</fullName>
    <defaultValue>&quot;UK,US,IN,&quot;</defaultValue>
    <inlineHelpText>List of all the country code separated by comma(,)</inlineHelpText>
    <label>Country Code</label>
    <type>TextArea</type>
</CustomField>