force-app/main/default/objects/Google_API_Setting__c/fields/Default_Country_Code__c.field-meta.xml
<CustomField>
    <fullName>Default_Country_Code__c</fullName>
    <label>Default Country Code</label>
    <length>4</length>
    <type>Text</type>
</CustomField>