force-app/main/default/objects/Google_API_Setting__c/fields/Default_Radius__c.field-meta.xml
<CustomField>
    <fullName>Default_Radius__c</fullName>
    <label>Default Radius</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>