force-app/main/default/objects/Google_API_Setting__c/fields/Default_Where_Clause__c.field-meta.xml
<CustomField>
    <fullName>Default_Where_Clause__c</fullName>
    <label>Default Where Clause</label>
    <length>255</length>
    <type>Text</type>
</CustomField>