force-app/main/default/objects/Google_API_Setting__c/fields/Display_Column_Fieldset_Name__c.field-meta.xml
<CustomField>
    <fullName>Display_Column_Fieldset_Name__c</fullName>
    <label>Display Column Fieldset Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>